Bug 28628 - [r300g] ARB_vp: error: relative address offset too large (163)
Summary: [r300g] ARB_vp: error: relative address offset too large (163)
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/r300 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-20 12:00 UTC by Richard Guo
Modified: 2010-08-03 15:25 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
error log (60.70 KB, text/plain)
2010-06-20 12:01 UTC, Richard Guo
Details

Description Richard Guo 2010-06-20 12:00:49 UTC
Neverwinter Nights 2 normally runs fine on wine under fglrx and other proprietary drivers. However, using git build of r300g at time of posting results in errors in the generated GLSL code that's caught by the command buffer.

Attached is the exact error output from wine.
Comment 1 Richard Guo 2010-06-20 12:01:18 UTC
Created attachment 36394 [details]
error log
Comment 2 Marek Olšák 2010-06-22 16:52:58 UTC
This looks like a parser bug in ARB_vertex_program.
Comment 3 Marek Olšák 2010-08-03 15:25:12 UTC
Fixed by commit 0614006d090902324149387ec150231b647928fd. Closing..


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.